# linkedin-cv-updater

./: .coverage  .gitignore  README.md  my_about.md  pdfExport.har  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: implementation_plan.md  task.md  walkthrough.md
docs/tickets/: Ticket_1.1_1.2_Report.md  Ticket_1.3_Report.md  Ticket_1.4_Report.md  Ticket_1.5_Report.md  Ticket_1.6_Report.md  Ticket_1.7_Report.md
scratch/: parse_har_pdf.py
scripts/: e2e_test_update_about.py  e2e_test_update_experience.py  start_chrome.sh  test_linkedin_auth_flow.py
src/linkedin_cv_updater/: __init__.py  linkedin_client.py  logger.py  main.py  server.py
src/linkedin_cv_updater/tools/: __init__.py  export_pdf.py  generate_pdf.py  get_about.py  update_about.py  update_experience.py
tests/: test_linkedin_client.py  test_main.py  test_server.py  test_update_about.py  test_update_experience.py
