[project]
name = "linkedin-cv-updater-mcp"
version = "0.2.0"
description = "FastMCP server to update LinkedIn experience from IDE context"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "markdown>=3.5.0"
]

[project.scripts]
linkedin-cv-updater = "linkedin_cv_updater.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_cv_updater"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
